--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
 
     .cidade{
-      background-image: url(/assets/cidade.jpg);
+      background-image: url(assets/cidade.jpg);
     }
   </style>
   
@@ -32,7 +32,7 @@
 
       <nav class=" navbar sticky-top  navbar-expand-sm navbar-light azul font-weight-bold ">
           <!-- LOGO -->
-          <a class="navbar-brand" href=""> <img src="/assets/logo.png" style="width: 200px;"></a>
+          <a class="navbar-brand" href=""> <img src="assets/logo.png" style="width: 200px;"></a>
 
           <!-- BOTÃO RESPONSIVO -->
           <button class="navbar-toggler" data-toggle="collapse" data-target="#abrir">
@@ -78,7 +78,7 @@
       
       <div class="row">
         <div class="col-lg-12">
-          <img src="/assets/cidade.jpg" class="w-100 ">    
+          <img src="assets/lab.jpeg" class="w-100 ">    
         </div>
             
       </div>
