--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       
       <div class="row">
         <div class="col-lg-12">
-          <img src="assets/lab.jpeg" class="w-100 ">    
+          <img src="assets/cidade.jpg" class="w-100 ">    
         </div>
             
       </div>
@@ -94,7 +94,7 @@
         <div class="row">
 
           <div class="col-md-6"> 
-            <img src="/assets/lab.jpeg" class=" w-100 ml">
+            <img src="/assets/lab.jpg" class=" w-100 ml">
           </div>
 
           <div class="col-md-6 d-flex">
