Mudança nos texto de Inovação, Crescimento e Resultado

--- a/index.html
+++ b/index.html
@@ -153,9 +153,8 @@
             <img src="https://source.unsplash.com/random/900x454" class="img-fluid" width="1000">
             <h3 class="text-center">Inovação</h3> 
 
-              <p class="lead text-justify"> O sistema de Apoio e Gerenciamento para Laboratórios (MyLab) - 
-                É uma solução tecnológica para proprietáritos e usuários de laboratórios de escolas, 
-                universidades e faculdades.
+              <p class="lead text-justify"> Exploramos sempre novas ideias com o objetivo de oferecer para nossos 
+                clientes o melhor que a tecnologia pode nos proporcionar.
               </p>
 
               <button class="btn btn-outline-dark">Saiba mais...</button>  
@@ -170,9 +169,8 @@
             <img src="https://source.unsplash.com/user/erondu/900x454" class="img-fluid" width="1000">
             <h3 class="text-center">Crescimento</h3> 
 
-            <p class="lead text-justify"> O sistema de Apoio e Gerenciamento para Laboratórios (MyLab) - 
-              É uma solução tecnológica para proprietáritos e usuários de laboratórios de escolas, 
-              universidades e faculdades.
+            <p class="lead text-justify"> Processo resultante do trabalho bem desenvolvido por nossos colaboradores 
+              que se empenham ao máximo em cada projeto para fornecer a solução ideal para nossos clientes.
             </p>
 
             <button class="btn btn-outline-dark">Saiba mais...</button>  
@@ -187,9 +185,8 @@
             <img src="assets/marcozero.png" class="img-fluid" width="1000">
             <h3 class="text-center">Resultados</h3> 
 
-              <p class="lead text-justify"> O sistema de Apoio e Gerenciamento para Laboratórios (MyLab) - 
-                É uma solução tecnológica para proprietáritos e usuários de laboratórios de escolas, 
-                universidades e faculdades.
+              <p class="lead text-justify"> Efeito de nossas ações. Finalização de um problema. A cada problema que 
+                finalizamos, produzimos soluções satisfatórias.
               </p>
 
               <button class="btn btn-outline-dark">Saiba mais...</button>  
