Atualização da página home

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <header> 
 
     <!-- INICIO BARRA DE NAVEGAÇÃO -->
-    <nav class=" sticky-top navbar navbar-expand-sm navbar-light  py-3"> 
+    <nav class="fixed-top navbar navbar-expand-sm navbar-light  py-3"> 
 
       <!-- INICIO CONTAINER-->
       <div class="container">
@@ -206,7 +206,7 @@
   <section>
 
     <div class="container-fluid">
-      <h3 class="display-4 text-center my-5">Como funciona o Mylab?</h3>
+      <h1 class=" tamanho text-center my-5">Nosso principal Serviço</h1>
       <div class="row mx-5 border border-light mb-5">
         <div class="col-md-6">
 
@@ -225,7 +225,9 @@
               universidades e faculdades.
             </p>
 
-            <button class="btn btn-outline-dark mb-5">Saiba mais...</button>
+            <div class="d-flex justify-content-end">
+              <button class="btn btn-outline-dark btn-custom mb-5">Saiba mais...</button>
+            </div>
                         
           </div>
 
@@ -286,7 +288,7 @@
     </div>
 
     <!-- MAPA PORTO DIGITAL -->
-    <div class="d-flex justify-content-end mt-3 d-block" ">
+    <div class="d-flex justify-content-end mt-3 d-block border" ">
       <div class="item">
       
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.371267959638!2d-34.875296235220084!3d-8.063559944194122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7caecfbcc5347f69!2sPorto%20Digital%20-%20NGPD%20(N%C3%BAcleo%20de%20Gest%C3%A3o%20do%20Porto%20Digital)!5e0!3m2!1spt-BR!2sbr!4v1617491964824!5m2!1spt-BR!2sbr" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy">
