--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <!-- Estilo customizado -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
   
   <title>MyLab</title>
 </head>
@@ -49,16 +51,16 @@
           <ul class="navbar-nav ml-auto">
 
             <li  class="nav-item">
-              <a href="index-html" class="nav-link active">Home</a>
+              <a href="index.htmlr" class="nav-link active">Home</a>
             </li>
             <li  class="nav-item">
-              <a href="" class="nav-link">Serviços</a>
+              <a href="#" class="nav-link">Serviços</a>
             </li>
             <li  class="nav-item">
-              <a href="" class="nav-link">Sobre</a>
+              <a href="#" class="nav-link">Sobre</a>
             </li>
             <li  class="nav-item">
-              <a href="" class="nav-link">Contato</a>
+              <a href="#" class="nav-link">Contato</a>
             </li>
             <li  class="nav-item">
               <form class="input-group">
@@ -226,7 +228,7 @@
             </p>
 
             <div class="d-flex justify-content-end">
-              <button class="btn btn-outline-dark btn-custom mb-5">Saiba mais...</button>
+              <button class="btn btn-outline-dark btn-custom mb-5">Saiba mais</button>
             </div>
                         
           </div>
@@ -247,15 +249,14 @@
 
   <div class="container">
 
-    <div class="d-flex justify-content-center">
-        <div class="item mb-5">
-
-            <a href="https://github.com/CoderHamilton/DevCompilers">
-
-               <svg  xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-github " viewBox="0 0 16 16">
+    <div class="d-flex justify-content-center" id="git-bottom">
+        <div class="item mb-5 git-bottom">
+            <a class="github-icon" href="https://github.com/CoderHamilton/DevCompilers" target="_blank" rel="external">
+              <i class="fab fa-github"></i>
+               <!--<svg  xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-github " viewBox="0 0 16 16">
                     <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-              </svg>
-              </a>
+              </svg>-->
+            </a>
         </div> 
 
       </div>
@@ -272,16 +273,16 @@
 
       <div class="item">
 
-        <a href="" class="btn btn-outline-dark">
+        <a href="#" class="btn btn-outline-dark">
           <i class="fab fa-facebook"></i>
         </a>
-        <a href="" class="btn btn-outline-dark ml-2">
+        <a href="#" class="btn btn-outline-dark ml-2">
           <i class="fab fa-twitter"></i>
         </a>
-        <a href="" class="btn btn-outline-dark ml-2">
+        <a href="#" class="btn btn-outline-dark ml-2">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="" class="btn btn-outline-dark ml-2">
+        <a href="#" class="btn btn-outline-dark ml-2">
           <i class="fab fa-youtube"></i>
         </a>
       </div>
