--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <ul class="navbar-nav ml-auto">
 
             <li  class="nav-item">
-              <a href="index.htmlr" class="nav-link active">Home</a>
+              <a href="index.html" class="nav-link active">Home</a>
             </li>
             <li  class="nav-item">
               <a href="#" class="nav-link">Serviços</a>
