adicionando outras paginas ao site

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
               <a href="index.html" class="nav-link active">Home</a>
             </li>
             <li  class="nav-item">
-              <a href="#" class="nav-link">Serviços</a>
+              <a href="servicos.html" class="nav-link">Serviços</a>
             </li>
             <li  class="nav-item">
-              <a href="#" class="nav-link">Sobre</a>
+              <a href="sobre.html" class="nav-link">Sobre</a>
             </li>
             <li  class="nav-item">
-              <a href="#" class="nav-link">Contato</a>
+              <a href="contato.html" class="nav-link">Contato</a>
             </li>
             <li  class="nav-item">
               <form class="input-group">
@@ -120,7 +120,7 @@
               </div>
 
               <div class="carousel-item">
-                <img src="assets/porto.jpg" class="w-100">
+                <img src="assets/porto1.png" class="w-100">
                 <div class="carousel-caption">
                   <h3>No prédio do porto digital, um dos maiores polos de tecnologia do Brasil.</h3>
                 </div>
@@ -249,8 +249,8 @@
 
   <div class="container">
 
-    <div class="d-flex justify-content-center" id="git-bottom">
-        <div class="item mb-5 git-bottom">
+    <div class="d-flex justify-content-center">
+        <div class="item mb-5">
             <a class="github-icon" href="https://github.com/CoderHamilton/DevCompilers" target="_blank" rel="external">
               <i class="fab fa-github"></i>
                <!--<svg  xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-github " viewBox="0 0 16 16">
@@ -289,7 +289,7 @@
     </div>
 
     <!-- MAPA PORTO DIGITAL -->
-    <div class="d-flex justify-content-end mt-3 d-block border" ">
+    <div class="mapa d-flex justify-content-end mt-3">
       <div class="item">
       
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.371267959638!2d-34.875296235220084!3d-8.063559944194122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7caecfbcc5347f69!2sPorto%20Digital%20-%20NGPD%20(N%C3%BAcleo%20de%20Gest%C3%A3o%20do%20Porto%20Digital)!5e0!3m2!1spt-BR!2sbr!4v1617491964824!5m2!1spt-BR!2sbr" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy">
